[package]
name = "rust_playground"
version = "0.1.0"
edition = "2021"


[dependencies]
bytes = "1.6.0"
klickhouse = { version = "0.13.0", features = ["tls", "refinery", "bb8"] }
tokio = { version = "1.38.0", features = ["full"] }
chrono = "0.4.38"
flate2 = "1.0"
futures = "0.3"
tokio-util = { version = "0.6", features = ["io"] }
tokio-stream = "0.1.15"
csv = "1.3.0"
serde = { version = "1.0.203", features = ["derive"] }
dotenv = "0.15.0"